dev: change resize target + so that we can shrink typst's html document to fit

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -87,12 +87,18 @@
     style="
       padding: 0;
       margin: 0;
+      height: fit-content;
       background-color: var(--typst-preview-background-color) !important;
     "
   >
     <div
-      id="imageContainer"
-      style="background-color: var(--typst-preview-background-color) !important"
+      id="typst-app"
+      style="
+        width: fit-content;
+        height: fit-content;
+        margin: 0 auto;
+        background-color: var(--typst-preview-background-color) !important;
+      "
     ></div>
   </body>
 </html>
