--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -27,10 +27,7 @@
         let deltaLKlsl = deltaL / 1.0;
         let deltaCkcsc = deltaC / sc;
         let deltaHkhsh = deltaH / sh;
-        let i =
-          deltaLKlsl * deltaLKlsl +
-          deltaCkcsc * deltaCkcsc +
-          deltaHkhsh * deltaHkhsh;
+        let i = deltaLKlsl * deltaLKlsl + deltaCkcsc * deltaCkcsc + deltaHkhsh * deltaHkhsh;
         return i < 0 ? 0 : Math.sqrt(i);
       }
 
@@ -55,18 +52,33 @@
 
       // https://stackoverflow.com/questions/26414770/getting-the-rgb-values-for-a-css-html-named-color-in-javascript
       function cssColorToRgba(cssColor) {
-        var canvas = document.createElement("canvas");
-        var context = canvas.getContext("2d");
+        var canvas = document.createElement('canvas');
+        var context = canvas.getContext('2d');
         context.fillStyle = cssColor;
         context.fillRect(0, 0, 1, 1);
         return context.getImageData(0, 0, 1, 1).data;
       }
 
-      var defaultBackgroundColor = "rgb(82, 86, 89)";
+      var defaultBackgroundColor = 'rgb(82, 86, 89)';
       var previewBackgroundColor =
         getComputedStyle(document.documentElement).getPropertyValue(
-          "--vscode-sideBar-background"
+          '--vscode-sideBar-background',
         ) || defaultBackgroundColor;
+
+      var defaultToolbarFgColor = '#fff';
+      var previewToolbarFgColor =
+        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-foreground') ||
+        defaultToolbarFgColor;
+
+      var defaultToolbarBorderColor = 'rgba(0, 0, 0, 0)';
+      var previewToolbarBorderColor =
+        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-border') ||
+        defaultToolbarBorderColor;
+
+      var defaultToolbarBgColor = 'rgb(50, 54, 57)';
+      var previewToolbarBgColor =
+        getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-background') ||
+        defaultToolbarBgColor;
 
       /// Perceptible distance between colors:
       /// 0~1: cannot distinguish by human eyes
@@ -78,8 +90,20 @@
 
       // append css variable --typst-preview-background-color
       document.documentElement.style.setProperty(
-        "--typst-preview-background-color",
-        previewBackgroundColor
+        '--typst-preview-background-color',
+        previewBackgroundColor,
+      );
+      document.documentElement.style.setProperty(
+        '--typst-preview-toolbar-fg-color',
+        previewToolbarFgColor,
+      );
+      document.documentElement.style.setProperty(
+        '--typst-preview-toolbar-border-color',
+        previewToolbarBorderColor,
+      );
+      document.documentElement.style.setProperty(
+        '--typst-preview-toolbar-bg-color',
+        previewToolbarBgColor,
       );
     </script>
     <script type="module" src="/src/main.js"></script>
@@ -91,19 +115,142 @@
       padding: 0;
       margin: 0;
       height: fit-content;
+      width: 100%;
       background-color: var(--typst-preview-background-color) !important;
     "
   >
     <!-- reserving 1px to hide height border, margin-top: -1px; -->
-    <div
-      id="typst-app"
-      style="
-        width: fit-content;
-        height: fit-content;
-        margin: 0 auto;
-        margin-top: -1px;
-        background-color: var(--typst-preview-background-color) !important;
-      "
-    ></div>
+    <div id="typst-container" style="width: 100%">
+      <div id="typst-container-top" style="width: 100%; z-index: 1">
+        <div id="typst-top-toolbar" style="width: 100%">
+          <div
+            id="typst-top-toolbar-start"
+            class="flex-row"
+            style="flex: 1; padding-inline-end: 20px"
+          >
+            <div
+              id="typst-top-toolbar-navigator"
+              class="typst-toolbar-icon"
+              title="Content Preview"
+              style="width: 0.75rem; height: 0.75rem; flex: 0 0 20px"
+            >
+              <svg
+                viewBox="0 0 20 20"
+                preserveAspectRatio="xMidYMid meet"
+                focusable="false"
+                role="none"
+                style="fill: var(--fill-color)"
+              >
+                <g>
+                  <path d="M2 4h16v2H2zM2 9h16v2H2zM2 14h16v2H2z"></path>
+                </g>
+              </svg>
+            </div>
+            <div
+              id="typst-top-help-button"
+              class="typst-toolbar-icon"
+              title="Help"
+              style="width: 0.75rem; height: 0.75rem; flex: 0 0 20px"
+            >
+              <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"
+                style="fill: none; stroke: var(--fill-color)">
+                <path
+                  d="M9.08997 9.00007C9.32507 8.33174 9.78912 7.76818 10.3999 7.40921C11.0107 7.05023 11.7289 6.91901 12.4271 7.03879C13.1254 7.15856 13.7588 7.5216 14.215 8.0636C14.6713 8.60561 14.921 9.2916 14.92 10.0001C14.92 12.0001 11.92 13.0001 11.92 13.0001M12 17.0001H12.01M3 7.94153V16.0586C3 16.4013 3 16.5726 3.05048 16.7254C3.09515 16.8606 3.16816 16.9847 3.26463 17.0893C3.37369 17.2077 3.52345 17.2909 3.82297 17.4573L11.223 21.5684C11.5066 21.726 11.6484 21.8047 11.7985 21.8356C11.9315 21.863 12.0685 21.863 12.2015 21.8356C12.3516 21.8047 12.4934 21.726 12.777 21.5684L20.177 17.4573C20.4766 17.2909 20.6263 17.2077 20.7354 17.0893C20.8318 16.9847 20.9049 16.8606 20.9495 16.7254C21 16.5726 21 16.4013 21 16.0586V7.94153C21 7.59889 21 7.42756 20.9495 7.27477C20.9049 7.13959 20.8318 7.01551 20.7354 6.91082C20.6263 6.79248 20.4766 6.70928 20.177 6.54288L12.777 2.43177C12.4934 2.27421 12.3516 2.19543 12.2015 2.16454C12.0685 2.13721 11.9315 2.13721 11.7985 2.16454C11.6484 2.19543 11.5066 2.27421 11.223 2.43177L3.82297 6.54288C3.52345 6.70928 3.37369 6.79248 3.26463 6.91082C3.16816 7.01551 3.09515 7.13959 3.05048 7.27477C3 7.42756 3 7.59889 3 7.94153Z"
+                  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </div>
+
+            <span id="typst-toolbar-title"></span>
+          </div>
+          <div id="typst-top-toolbar-center" class="flex-row" style="align-items: center"></div>
+          <div id="typst-top-toolbar-end" class="flex-row-rev" style="flex: 1; gap: 0.3rem">
+            <div id="typst-page-next-selector" title="Next Page">
+              <div class="typst-page-button">&gt;</div>
+            </div>
+            <div>
+              <div class="typst-page-selector-content" style="--page-length-digits: 2" title="Current Page">
+                <input part="input" type="text" id="typst-page-selector" value="1" /><span
+                  class="typst-page-selector-divider"
+                  >&nbsp;/&nbsp;</span
+                >
+                <span class="typst-page-number-indicator" title="Total Pages"></span>
+              </div>
+            </div>
+            <div id="typst-page-prev-selector" title="Prev Page">
+              <div class="typst-page-button">&lt;</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="typst-container-main">
+        <div
+          id="typst-app"
+          style="background-color: var(--typst-preview-background-color) !important"
+        ></div>
+      </div>
+    </div>
+
+    <div id="typst-help-panel" class="hidden">
+      <div style="margin: 20px; width: 100%; height: 100%;">
+        <div class="typst-panel disable-scrollbars" style="min-width: calc(100% - 20px); height: calc(100% - 20px);">
+          <div class="panel-title">
+            Key Bindings
+          </div>
+          <div style="height: 1rem; width: 1px;"></div>
+          <div class="flex-row">
+            <div class="flex-col" style="flex: 20; min-width: 125px; align-items: flex-end; gap: 5px">
+              <div class="key-binding-row">
+                <div class="key-binding-box">h</div>
+              </div>
+              <div class="key-binding-row">
+                <div class="key-binding-box">o</div>
+              </div>
+              <div class="key-binding-row">
+                <div class="key-binding-box">g</div>
+              </div>
+              <div class="key-binding-row">
+                <div class="key-binding-box">right</div>
+                <div class="key-binding-desc">/</div>
+                <div class="key-binding-box">space</div>
+              </div>
+              <div class="key-binding-row">
+                <div class="key-binding-box">left</div>
+              </div>
+              <div class="key-binding-row">
+                <div class="key-binding-box">down</div>
+              </div>
+              <div class="key-binding-row">
+                <div class="key-binding-box">up</div>
+              </div>
+            </div>
+            <div style="flex: 10; max-width: 30px;">
+            </div>
+            <div class="flex-col" style="flex: 70; gap: 5px">
+              <div class="key-binding-desc">
+                Toggle the help panel (key bindings).
+              </div>
+              <div class="key-binding-desc">
+                Toggle content preview. <span style="color: orange;">(Coming soon)</span>
+              </div>
+              <div class="key-binding-desc">
+                Goto the page by number.
+              </div>
+              <div class="key-binding-desc">
+                Switch to next animation or slide.
+              </div>
+              <div class="key-binding-desc">
+                Switch to previous animation or slide.
+              </div>
+              <div class="key-binding-desc">
+                Switch to next slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">right</span>)</span>
+              </div>
+              <div class="key-binding-desc">
+                Switch to previous slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">left</span>)</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
