--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -70,6 +70,8 @@
         getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-foreground') ||
         defaultToolbarFgColor;
 
+      var previewForegroundColor = previewToolbarFgColor;
+
       var defaultToolbarBorderColor = 'rgba(0, 0, 0, 0)';
       var previewToolbarBorderColor =
         getComputedStyle(document.documentElement).getPropertyValue('--vscode-menu-border') ||
@@ -86,12 +88,17 @@
       /// 2~10: perceptible at a glance
       if (deltaE(cssColorToRgba(previewBackgroundColor), [255, 255, 255]) < 5) {
         previewBackgroundColor = defaultBackgroundColor;
+        previewForegroundColor = defaultToolbarFgColor;
       }
 
       // append css variable --typst-preview-background-color
       document.documentElement.style.setProperty(
         '--typst-preview-background-color',
         previewBackgroundColor,
+      );
+      document.documentElement.style.setProperty(
+        '--typst-preview-foreground-color',
+        previewForegroundColor,
       );
       document.documentElement.style.setProperty(
         '--typst-preview-toolbar-fg-color',
@@ -152,11 +159,18 @@
               title="Help"
               style="width: 0.75rem; height: 0.75rem; flex: 0 0 20px"
             >
-              <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"
-                style="fill: none; stroke: var(--fill-color)">
+              <svg
+                viewBox="0 0 24 24"
+                preserveAspectRatio="xMidYMid meet"
+                xmlns="http://www.w3.org/2000/svg"
+                style="fill: none; stroke: var(--fill-color)"
+              >
                 <path
                   d="M9.08997 9.00007C9.32507 8.33174 9.78912 7.76818 10.3999 7.40921C11.0107 7.05023 11.7289 6.91901 12.4271 7.03879C13.1254 7.15856 13.7588 7.5216 14.215 8.0636C14.6713 8.60561 14.921 9.2916 14.92 10.0001C14.92 12.0001 11.92 13.0001 11.92 13.0001M12 17.0001H12.01M3 7.94153V16.0586C3 16.4013 3 16.5726 3.05048 16.7254C3.09515 16.8606 3.16816 16.9847 3.26463 17.0893C3.37369 17.2077 3.52345 17.2909 3.82297 17.4573L11.223 21.5684C11.5066 21.726 11.6484 21.8047 11.7985 21.8356C11.9315 21.863 12.0685 21.863 12.2015 21.8356C12.3516 21.8047 12.4934 21.726 12.777 21.5684L20.177 17.4573C20.4766 17.2909 20.6263 17.2077 20.7354 17.0893C20.8318 16.9847 20.9049 16.8606 20.9495 16.7254C21 16.5726 21 16.4013 21 16.0586V7.94153C21 7.59889 21 7.42756 20.9495 7.27477C20.9049 7.13959 20.8318 7.01551 20.7354 6.91082C20.6263 6.79248 20.4766 6.70928 20.177 6.54288L12.777 2.43177C12.4934 2.27421 12.3516 2.19543 12.2015 2.16454C12.0685 2.13721 11.9315 2.13721 11.7985 2.16454C11.6484 2.19543 11.5066 2.27421 11.223 2.43177L3.82297 6.54288C3.52345 6.70928 3.37369 6.79248 3.26463 6.91082C3.16816 7.01551 3.09515 7.13959 3.05048 7.27477C3 7.42756 3 7.59889 3 7.94153Z"
-                  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
               </svg>
             </div>
 
@@ -168,7 +182,11 @@
               <div class="typst-page-button">&gt;</div>
             </div>
             <div>
-              <div class="typst-page-selector-content" style="--page-length-digits: 2" title="Current Page">
+              <div
+                class="typst-page-selector-content"
+                style="--page-length-digits: 2"
+                title="Current Page"
+              >
                 <input part="input" type="text" id="typst-page-selector" value="1" /><span
                   class="typst-page-selector-divider"
                   >&nbsp;/&nbsp;</span
@@ -191,14 +209,18 @@
     </div>
 
     <div id="typst-help-panel" class="hidden">
-      <div style="margin: 20px; width: 100%; height: 100%;">
-        <div class="typst-panel disable-scrollbars" style="min-width: calc(100% - 20px); height: calc(100% - 20px);">
-          <div class="panel-title">
-            Key Bindings
-          </div>
-          <div style="height: 1rem; width: 1px;"></div>
+      <div style="margin: 20px; width: 100%; height: 100%">
+        <div
+          class="typst-panel disable-scrollbars"
+          style="min-width: calc(100% - 20px); height: calc(100% - 20px)"
+        >
+          <div class="panel-title">Key Bindings</div>
+          <div style="height: 1rem; width: 1px"></div>
           <div class="flex-row">
-            <div class="flex-col" style="flex: 20; min-width: 125px; align-items: flex-end; gap: 5px">
+            <div
+              class="flex-col"
+              style="flex: 20; min-width: 125px; align-items: flex-end; gap: 5px"
+            >
               <div class="key-binding-row">
                 <div class="key-binding-box">h</div>
               </div>
@@ -223,29 +245,28 @@
                 <div class="key-binding-box">up</div>
               </div>
             </div>
-            <div style="flex: 10; max-width: 30px;">
-            </div>
+            <div style="flex: 10; max-width: 30px"></div>
             <div class="flex-col" style="flex: 70; gap: 5px">
+              <div class="key-binding-desc">Toggle the help panel (key bindings).</div>
               <div class="key-binding-desc">
-                Toggle the help panel (key bindings).
+                Toggle content preview. <span style="color: orange">(Coming soon)</span>
+              </div>
+              <div class="key-binding-desc">Goto the page by number.</div>
+              <div class="key-binding-desc">Switch to next animation or slide.</div>
+              <div class="key-binding-desc">Switch to previous animation or slide.</div>
+              <div class="key-binding-desc">
+                Switch to next slide.
+                <span style="color: orange"
+                  >(currently just same as
+                  <span class="key-binding-box" style="margin: 0 2px">right</span>)</span
+                >
               </div>
               <div class="key-binding-desc">
-                Toggle content preview. <span style="color: orange;">(Coming soon)</span>
-              </div>
-              <div class="key-binding-desc">
-                Goto the page by number.
-              </div>
-              <div class="key-binding-desc">
-                Switch to next animation or slide.
-              </div>
-              <div class="key-binding-desc">
-                Switch to previous animation or slide.
-              </div>
-              <div class="key-binding-desc">
-                Switch to next slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">right</span>)</span>
-              </div>
-              <div class="key-binding-desc">
-                Switch to previous slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">left</span>)</span>
+                Switch to previous slide.
+                <span style="color: orange"
+                  >(currently just same as
+                  <span class="key-binding-box" style="margin: 0 2px">left</span>)</span
+                >
               </div>
             </div>
           </div>
