--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/svg" href="/favicon.svg">
     <!-- https://github.com/darkreader/darkreader/blob/main/CONTRIBUTING.md#disabling-dark-reader-on-your-site -->
     <meta name="darkreader-lock" />
 
